src/index.css
body{
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #697565;
}

.stopwatch{
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 4px solid;
  border-color: #181C14;
  border-radius: 50px;
  background-color: #ECDFCC;
  padding: 20px;
  max-width: 330px; /* Add this */
  width: 100%; /* Makes the container responsive */
}

.display{
  font-size: 5rem;
  font-family: monospace;
  font-weight: bold;
  color: #3C3D37; 
  text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
  margin-bottom: 25px;
}


.controls button{
  font-size: 1.5rem;
  font-weight: bold;
  padding: 10px 20px;
  margin: 5px;
  min-width: 125px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  color: white;
  transition: background-color 0.5s ease;
}

.start-button{
  background-color: hsl(115, 100%, 40%)
}

.start-button:hover{
  background-color: hsl(115, 100%, 30%)
}

.stop-button{
  background-color: hsl(10, 90%, 50%)
}

.stop-button:hover{
  background-color: hsl(10, 90%, 40%)
}

.reset-button{
  background-color: hsl(205, 95%, 60%)
}

.reset-button:hover{
  background-color: hsl(205, 95%, 50%)
}

/* Responsive Design for Smaller Screens */
@media (max-width: 600px) {
  .stopwatch {
    padding: 20px;
  }

  .display {
    font-size: 3rem;
  }

  .controls button {
    font-size: 1.2rem;
    padding: 8px 15px;
    min-width: 100px;
  }
}

